<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.nbauma109</groupId>
  <artifactId>netbeans-visual-diff-standalone</artifactId>
  <version>2.0.52-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>NetBeans Visual Diff Standalone</name>
  <description>Use the NetBeans diff component in any Java Swing project !</description>
  <url>https://github.com/nbauma109/netbeans-visual-diff-standalone</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License</name>
      <distribution>repo</distribution>
      <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>nbauma109</id>
      <name>Nicolas Baumann</name>
      <url>https://github.com/nbauma109</url>
    </developer>
  </developers>

  <prerequisites>
    <maven>3</maven>
  </prerequisites>

  <scm>
    <connection>scm:git:https://github.com/nbauma109/netbeans-visual-diff-standalone.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/nbauma109/netbeans-visual-diff-standalone.git</developerConnection>
    <url>https://github.com/nbauma109/netbeans-visual-diff-standalone</url>
    <tag>HEAD</tag>
  </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <goals>install</goals>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <proc>full</proc>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <useModulePath>false</useModulePath>
          <argLine>@{jacocoArgLine} --add-opens java.base/java.net=ALL-UNNAMED
            --add-opens java.desktop/javax.swing.text=ALL-UNNAMED
            --add-opens java.prefs/java.util.prefs=ALL-UNNAMED
            --add-opens
            java.desktop/javax.swing.plaf.basic=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.14</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <propertyName>jacocoArgLine</propertyName>
            </configuration>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.8</version>
        <executions>
          <execution>
            <id>sign-release</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.10.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <!-- Compile time dependencies -->
    <dependency>
      <groupId>org.netbeans.api</groupId>
      <artifactId>org-netbeans-modules-diff</artifactId>
      <version>${netbeans.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-explorer</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-options-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-spi-quicksearch</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-projectapi</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-queries</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-annotations-common</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-intent</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-progress-nb</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-progress</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-templates</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-options-keymap</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-filesystems-nb</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-scripting</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-options-editor</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-autoupdate-services</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.netbeans.modules</groupId>
      <artifactId>org-netbeans-modules-editor-mimelookup-impl</artifactId>
      <version>${netbeans.version}</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-autoupdate-services</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.netbeans.modules</groupId>
      <artifactId>org-openide-util-ui-svg</artifactId>
      <version>${netbeans.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.netbeans.modules</groupId>
      <artifactId>org-netbeans-modules-editor-plain</artifactId>
      <version>${netbeans.version}</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-options-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-progress-nb</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-progress</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-editor-fold-nbui</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-filesystems-nb</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-autoupdate-services</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.netbeans.modules</groupId>
      <artifactId>org-netbeans-modules-java-editor</artifactId>
      <version>${netbeans.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-search</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-explorer</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-refactoring-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-refactoring-java</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-refactoring-java</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-whitelist</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-java-source</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-libs-lucene</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-options-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-libs-asm</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-java-completion</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-spi-editor-hints</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-spi-quicksearch</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-spi-tasklist</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-projectapi</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-projectuiapi-base</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-project-indexingbridge</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-java-preprocessorbridge</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-queries</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-sampler</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-editor-codetemplates</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-classfile</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-parsing-lucene</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-java-platform</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-libs-javacapi</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-lib-nbjavac</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-libs-javacimpl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-annotations-common</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-java-classpath</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-java</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-progress-nb</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-progress</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-editor-bracesmatching</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-editor-completion</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-editor-deprecated-pre65formatting</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-keyring</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-swing-plaf</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-api-scripting</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-options-editor</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-autoupdate-services</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.netbeans.modules</groupId>
      <artifactId>org-netbeans-modules-editor-settings-storage</artifactId>
      <version>${netbeans.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.netbeans.modules</groupId>
          <artifactId>org-netbeans-modules-options-keymap</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-autoupdate-services</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.netbeans.modules</groupId>
      <artifactId>org-netbeans-modules-editor-search</artifactId>
      <version>${netbeans.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-autoupdate-services</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.13.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <properties>
    <jacocoArgLine></jacocoArgLine>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <netbeans.version>RELEASE290</netbeans.version>
    <project.scm.id>github.com</project.scm.id>
  </properties>
</project>
